# BoidsWithSFML

./: CMakeLists.txt  readme.md
Code/Headers/: Aquarium.h  Boid.h  Game.h  GameProperties.h  GlobalFunctions.h
Code/Sources/: Aquarium.cpp  Boid.cpp  Game.cpp  GameProperties.cpp  GlobalFunctions.cpp  main.cpp
Resources/: properties.txt
